--- a/.github/workflows/PortfolioRonaldLima.yml
+++ b/.github/workflows/PortfolioRonaldLima.yml
@@ -7,7 +7,7 @@ env:
   AZURE_WEBAPP_NAME: PortfolioRonaldLima
   AZURE_WEBAPP_PACKAGE_PATH: Server\publish
   CONFIGURATION: Release
-  DOTNET_CORE_VERSION: 6.0.9622464307
+  DOTNET_CORE_VERSION: 6.0.307
   WORKING_DIRECTORY: Server
 jobs:
   build:
